<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>dev.rafex.ether.parent</groupId>
        <artifactId>ether-parent</artifactId>
        <version>9.5.5-SNAPSHOT</version>
        <relativePath>../../ether-parent/ether-parent/pom.xml</relativePath>
    </parent>

    <groupId>dev.rafex.ether.brain</groupId>
    <artifactId>ether-brain-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>ether-brain-parent</name>
    <description>Hexagonal agent runtime for building AI agents in Java 21</description>
    <url>https://rafex.dev/ether/brain</url>

    <inceptionYear>2026</inceptionYear>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Raúl Eduardo González Argote</name>
            <email>rafex@rafex.dev</email>
            <organization>dev.rafex</organization>
            <organizationUrl>https://rafex.dev</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/rafex/ether-brain.git</connection>
        <developerConnection>scm:git:https://github.com/rafex/ether-brain.git</developerConnection>
        <url>https://github.com/rafex/ether-brain</url>
    </scm>

    <modules>
        <module>ether-brain-common</module>
        <module>ether-brain-ports</module>
        <module>ether-brain-core</module>
        <module>ether-brain-spi-model</module>
        <module>ether-brain-infra-memory</module>
        <module>ether-brain-infra-http</module>
        <module>ether-brain-infra-file</module>
        <module>ether-brain-infra-model-demo</module>
        <module>ether-brain-infra-model-openai</module>
        <module>ether-brain-infra-model-ollama</module>
        <module>ether-brain-tools-local</module>
        <module>ether-brain-tools-remote</module>
        <module>ether-brain-bootstrap</module>
        <module>ether-brain-transport-cli</module>
        <module>ether-brain-transport-http</module>
        <module>ether-brain-architecture-tests</module>
    </modules>

    <properties>
        <!-- Override ether-parent's Java 25 default — ether-brain targets Java 21 -->
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.12.2</junit.version>
        <archunit.version>1.4.1</archunit.version>
        <!-- Pinned because ether-parent 9.5.5-SNAPSHOT dropped ether-logging from its BOM -->
        <ether-logging-core.version>9.5.5-SNAPSHOT</ether-logging-core.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <!-- Activate source and javadoc plugins for all jar child modules so
             Maven Central receives the required -sources.jar and -javadoc.jar.
             These executions are inherited; ether-parent only declares them in
             pluginManagement which is not enough for multi-level inheritance. -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals><goal>jar-no-fork</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals><goal>jar</goal></goals>
                    </execution>
                </executions>
                <configuration>
                    <failOnError>false</failOnError>
                    <doclint>none</doclint>
                    <quiet>true</quiet>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.3</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
